将首页的分页显示改为显示全部文章(去掉pagenate分页)

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,2 @@
 markdown: rdiscount
-permalink: /:year/:month/:day/:title/
-url: http://wangkuiwu.github.com
-author: skywang
-pygments: true
-safe: true
-paginate: 16
-auto: true
-
+highlighter: pygments
