--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,9 @@
 markdown: rdiscount
-highlighter: pygments
+permalink: /:year/:month/:day/:title/
+url: http://wangkuiwu.github.com
+author: skywang
+pygments: true
+safe: true
+paginate: 16
+auto: true
+
